--- a/PersonalSite/Pages/Resume/ResumePage.razor
+++ b/PersonalSite/Pages/Resume/ResumePage.razor
@@ -23,6 +23,8 @@
             <PersonalSite.Markdown.MarkdownView Content="@objectiveContent" />
         </section>
 
+            <div style="font-family: unset; font-family: var(--font1) !important;">
+
         <section>
         
         <div class="d-flex pb-4 pt-4 mt-4">
@@ -81,7 +83,6 @@
                 </div>
 
             }
-
         </section>
 
         <section class="mt-4 mb-4">
@@ -165,6 +166,7 @@
             }
 
         </section>
+                                </div>
         }
     </article>
 </div>
