--- a/PersonalSite/Pages/PostPage.razor
+++ b/PersonalSite/Pages/PostPage.razor
@@ -30,7 +30,7 @@ else
     {
         <PageTitle>@post.Title - Marina Sundström</PageTitle>
 
-        <article class="post outer">
+        <article class="post outer text">
 
             <div class="inner container">
 
