--- a/PersonalSite/Pages/Resume/ResumePage.razor
+++ b/PersonalSite/Pages/Resume/ResumePage.razor
@@ -9,7 +9,7 @@
 <PageTitle>Resumé - Marina Sundström</PageTitle>
 
 <div class="row">
-    <article class="sections inner">
+    <article class="sections">
 
         <h1>Resumé</h1>
 
