--- a/PersonalSite/Pages/Index.razor
+++ b/PersonalSite/Pages/Index.razor
@@ -43,6 +43,10 @@
     </div>
 </article>
 
+  <footer class="pt-3 pb-3 px-4 my-5 mx-auto w-100 container text-center border-top">
+      <small class="text-muted">© @DateTime.Now.Year Marina Sundström | Built with .NET & Blazor - Hosted by GitHub Pages</small>
+  </footer>
+
 @*
 
 <div class="bgimg-2">
