--- a/PersonalSite/Pages/Portfolio/PortfolioPage.razor
+++ b/PersonalSite/Pages/Portfolio/PortfolioPage.razor
@@ -1,5 +1,6 @@
 @page "/portfolio"
 @inject HttpClient Http
+@using PersonalSite.Markdown
 
 <PageTitle>Portfolio - Marina Sundström</PageTitle>
 
@@ -18,16 +19,10 @@ else
                 href="https://youtube.com/playlist?list=PLLBU--06ftFqPiAwkg3VKa2fIEhNu7J4L">playlist</a> on YouTube.</p>
     </div>
 
-    <div class="mt-5">
-
+    <div class="mt-5 row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
         @foreach (var project in projects.ToList())
             {
                 <ProjectView Project="project" />
-
-                @if (projects.LastOrDefault() != project)
-                {
-                    <hr />
-                }
             }
         </div>
     </article>
