--- a/PersonalSite/Pages/PostPage.razor
+++ b/PersonalSite/Pages/PostPage.razor
@@ -31,7 +31,7 @@ else
     {
         <PageTitle>@post.Title - Marina Sundström</PageTitle>
 
-        <article class="post outer text">
+        <article class="post outer">
 
             <div class="inner container">
 
