--- a/PersonalSite/Shared/MainLayout.razor
+++ b/PersonalSite/Shared/MainLayout.razor
@@ -1,14 +1,14 @@
 @inherits LayoutComponentBase
 
 <div class="container d-flex w-100 h-100 p-3 mx-auto flex-column" style="padding-top: 110px !important;">
-  <header class="mb-auto">
+  <header>
     <div>
       <NavMenu />
     </div>
   </header>
 
   <main>
-    @Body
+      @Body
   </main>
 
   <footer class="pt-3 pb-3 px-4 my-5 mx-auto w-100 container text-center border-top">
