--- a/PersonalSite/Pages/PostsPage.razor
+++ b/PersonalSite/Pages/PostsPage.razor
@@ -6,7 +6,9 @@
 
 <div class="row">
     <div class="col-sm-12 col-md-8">
-        <PageTitle>Marina Sundström</PageTitle>
+        <PageTitle>Articles - Marina Sundström</PageTitle>
+
+        <h1 class="post-title mb-4 mb-md-5">Articles</h1>
 
         @if (posts is null)
         {
@@ -14,10 +16,6 @@
         }
         else
         {
-            <PageTitle>Posts - Marina Sundström</PageTitle>
-
-            <h1 class="post-title mb-4 mb-md-5">Articles</h1>
-
             @foreach (var post in posts)
             {
                 <article class="pt-2 mb-4 mb-md-5">
