--- a/PersonalSite/Pages/Portfolio/ProjectView.razor
+++ b/PersonalSite/Pages/Portfolio/ProjectView.razor
@@ -4,7 +4,7 @@
                     <div class="card shadow">
 
                         <a href="@Project.Image" target="_blank">
-                            <img class="bd-placeholder-img card-img-top mt-3" style="max-height: 200px; max-width: 100%; margin: auto; object-fit: contain;" src="@Project.Image" />
+                            <img class="bd-placeholder-img card-img-top mt-3" style="height: 200px; max-width: 100%; margin: auto; object-fit: contain;" src="@Project.Image" />
                         </a>
                         <div class="card-body mt-2">
                             <h5 class="card-title">@Project.Name</h5>
