--- a/PersonalSite/Pages/Index.razor
+++ b/PersonalSite/Pages/Index.razor
@@ -50,7 +50,7 @@
     </div>
 </article>
 
-  <footer class="pt-3 pb-3 px-4 my-5 mx-auto w-100 container text-center border-top">
+  <footer class="pt-3 pb-3 px-4 my-5 mx-auto w-100 container text-center">
       <small class="text-muted">© @DateTime.Now.Year Marina Sundström | Built with .NET & Blazor - Hosted by GitHub Pages</small>
   </footer>
 
