--- a/PersonalSite/Pages/Resume/ExperienceList.razor
+++ b/PersonalSite/Pages/Resume/ExperienceList.razor
@@ -8,22 +8,26 @@
     {
         var experience = experiences.First();
 
-        <div class="d-flex" style="page-break-inside: avoid;">
-            <div class="col-logo">
-                <Logo Src="@experience.CompanyLogo" Alt="@($"{experience.Company} logo")" Class="me-4"
-                    Href="@experience.Link" />
-            </div>
+        <div class="card shadow mb-4" style="page-break-inside: avoid;">
+            <div class="card-body">
+                <div class="d-flex">
+                    <div class="col-logo">
+                    <Logo Src="@experience.CompanyLogo" Alt="@($"{experience.Company} logo")" Class="ms-md-3 me-md-4"
+                        Href="@experience.Link" />
+                    </div>
 
-            <div class="flex-grow-1">
-                <div class="mb-4" style="margin-top: 34px !important;">
-                    <h3 class="mt-3">@experience.Title
-                        @if(experience.Consultant) 
-                        {
-                            <span> Consultant</span>
-                        }
-                    </h3>
+                    <div class="flex-grow-1">
+                        <div class="mb-4 pb-md-1 me-md-4" style="margin-top: 34px !important;">
+                            <h3 class="mt-3">@experience.Title
+                                @if(experience.Consultant) 
+                                {
+                                    <span> Consultant</span>
+                                }
+                            </h3>
 
-                    <ExperienceView Model="@Foo(experience, false)" />
+                            <ExperienceView Model="@Foo(experience, false)" />
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -33,13 +37,15 @@
         var lastExperience = experiences.First();
         var firstExperience = experiences.Last();
 
-        <div class="d-flex" style="break-inside: avoid-page;">
-            <div class="col-logo">
-                <Logo Src="@firstExperience.CompanyLogo" Alt="@($"{firstExperience.Company} logo")" Class="me-4"
+        <div class="card shadow mb-4" style="break-inside: avoid-page;">
+            <div class="card-body">
+                <div class="d-flex">
+    <div class="col-logo">
+                <Logo Src="@firstExperience.CompanyLogo" Alt="@($"{firstExperience.Company} logo")" Class="ms-md-3 me-md-4"
                     Href="@firstExperience.Link" />
             </div>
 
-            <div class="flex-grow-1">
+            <div class="flex-grow-1 me-md-4 pb-md-1">
                 <h3 style="margin-top: 32px !important;">@firstExperience.Company</h3>
 
                 <p class="text-muted mb-5">
@@ -64,13 +70,10 @@
                         </li>
                     }
                 </ol>
+            </div>                 
+                </div>
             </div>
         </div>
-    }
-
-    @if (Groups.LastOrDefault() != group)
-    {
-        <hr />
     }
 }
 
