--- a/PersonalSite/wwwroot/css/app.css
+++ b/PersonalSite/wwwroot/css/app.css
@@ -242,7 +242,7 @@ header.main {
 .badge.tag {
   background-color: rgb(231 231 231);
   color: #4b4b4b;
-  font-weight: normal;
+  font-weight: 600;
 }
 
 .badge.comment-badge {
